--- a/Cipari.html
+++ b/Cipari.html
@@ -1,3 +1,4 @@
+<body background="cipari.jpg" >
 <h1>Informācijas daudzuma mērvienības</h1>
 <link rel="stylesheet" href="style.css">
 <form> 
@@ -17,3 +18,4 @@
 <div>MIB <input name="reiz"></div> 
 
  </form>
+</body>
