--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class ="nav">
         <ul>
         <li><a href ="laiks.html"> Tabula par aplikācijām kas palīdz plānot laiku.  </a></li>
-        <li><a href ="cipari.html"> Mērvienību pārveidošana  </a></li>
+        <li><a href ="Cipari.html"> Mērvienību pārveidošana  </a></li>
        
         </ul>
         
